// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extract webpack.js 1`] = `const a = require("./3.js");`;

exports[`extract webpack.js 2`] = `
const a = require("./1.js");
const _module = 1;
module.exports.color = "#FBC02D";
{
  const _module2 = 2;
  console.log(_module2);
  console.log(module);
}
exports.a = 3;
`;

exports[`extract webpack.js 3`] = `module.exports = 4;`;

exports[`extract webpack_object.js 1`] = `const r = require("./387.js").default;`;

exports[`extract webpack_object.js 2`] = `module.exports = "test";`;

exports[`extract webpack-esm.js 1`] = `
const a = require("./1.js");
const b = require("./2.js");
const c = require("./3.js");
const bDefault = b.default;
const cDefault = c;
const dDefault = b.default;
const eDefault = c;
console.log(a.counter);
console.log(bDefault.VERSION);
console.log(cDefault.VERSION);
`;

exports[`extract webpack-esm.js 2`] = `
export class counter {}
let _counter = 1;
counter = 2;
`;

exports[`extract webpack-esm.js 3`] = `
const x = {};
export default 1;
`;

exports[`extract webpack-esm.js 4`] = `
module.exports = {
  VERSION: 1
};
`;

exports[`extract webpack-var-injection.js 1`] = `
var m = require("./1.js");
var n = require("./2.js");
console.log(m, n);
`;

exports[`extract webpack-var-injection.js 2`] = `module.exports = 1;`;

exports[`extract webpack-var-injection.js 3`] = `module.exports = 2;`;

exports[`extract webpack5_object.js 1`] = `
const lib = require("./3.js");
console.log(lib);
`;

exports[`extract webpack5_object.js 2`] = `module.exports = "foo";`;

exports[`extractor > path mapping 1`] = `const a = require("./3.js");`;

exports[`extractor > path mapping 2`] = `
const a = require("../1.js");
const _module = 1;
module.exports.color = "#FBC02D";
{
  const _module2 = 2;
  console.log(_module2);
  console.log(module);
}
exports.a = 3;
`;

exports[`extractor > path mapping 3`] = `module.exports = 4;`;
